<resources>
    <string name="app_name">Teach Me</string>
    <string name="button_items">Dodaj pojęcia</string>
    <string name="button_learn">Ucz się!</string>
    <string name="text_menu">Witaj w TeachMe!</string>
    <string name="dictionary_title">Lista pojęć</string>
    <string name="delete_button">delete button</string>
    <string name="checkbox_list">checkbox_list</string>
    <string name="title_activity_new_dictionary_item">NewDictionaryItem</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_text_name">Pojęcie</string>
    <string name="edit_text_description">Opis</string>
    <string name="add_new_item">Dodaj nowe pojęcie</string>
    <string name="add_new_item_error">Nie udało się dodać pojęcia</string>
    <string name="btn_delete_all">Usuń wszystkie pojęcia</string>
    <string name="choose_method_text">Wybierz metodę</string>
    <string name="why_method">Dlaczego?</string>
    <string name="flashcards_method">Fiszki</string>
    <string name="diversed_practice_method">Rozproszona praktyka</string>
    <string name="tests_method">Wielokrotne zderzenia</string>
    <string name="mnemotechnics_method">Mnemotechniki</string>
    <string name="teacher_method">Nauczyciel</string>
    <string name="title_activity_why_method">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="why_method_desc">
        Kluczem do skuteczności metody dlaczego jest zgłębienie danego zagadnienia lub tematu w taki
        sposób, aby nowe informacje połączyć już ze znanymi. W tym celu należy zadawać pytania,
        tak jak to robią małe dzieci i szukać od razu na nie odpowiedzi. Uważaj tylko, żeby nie
        odejść za bardzo od tematu. Aby ułatwić sobie zadanie wypełniaj pola poniżej.
    </string>
    <string name="why_method_step_1">Krok 1.\nPodaj zagadnienie lub temat, który chcesz zapamiętać.</string>
    <string name="why_method_step_2">Krok 2.\nRozszerz podane zagadnienie o podstawowe informacje.</string>
    <string name="why_method_step_3">Krok 3.\nTeraz rozszerz poprzednią odpowiedź o dodatkowe informacje.</string>
    <string name="why_method_step_4">Krok 4.\nJeszcze raz rozwiń swoją wypowiedź.</string>
    <string name="why_method_step_1_answer">np. Komuna paryska to zryw rewolucyjny w Paryżu</string>
    <string name="why_method_step_2_answer">
        np. Komuna paryska wybuchła bo lud był niezawodolony, że Zgromadzenie Narodowe obniżyło
        żołnierzom żołd podczas wojny i nie chciało przeprowadzać przemian społecznych.
    </string>
    <string name="why_method_step_3_answer">
        np. Żołnierze paryscy odmówili wykonania rozkazu i aresztowali swojego dowódcę. Rozstrzelali
        go w spontanicznej egzekucji, a w tym czasie rząd uciekł do Wersalu. Zorganizowano wybory, a
        nowo wybrane władze zaczęły wprowadzać swoje porządki.
    </string>
    <string name="why_method_step_4_answer">
        np. Rewolucja skończyła się atakiem wersalczyków, czyli żołnierzy wiernym rządowi. Wszystkie
        wprowadzone przez Komunę ustawy odwołano, choć do części z nich wkrótce powrócono.
    </string>
    <string name="why_method_step_2_question">np. Dlaczego wybuchła komuna paryska?</string>
    <string name="why_method_step_3_question">np. Jak doszło do wybuchu?</string>
    <string name="why_method_step_4_question">np. Jak zakończyła się Komuna?</string>
    <string name="flashcards_method_desc">
        Fiszkami nazywamy metodę wykorzystującą kartoniki, gdzie po jednej stronie jest
        hasło/odpowiedź, a z drugiej opis/pytanie. Kartki umieszczane są w pudełku o 5 przegrodach,
        zaczynając od pierwszej. Metoda polega na przechodzeniu przez wszystkie pojęcia w danej
        przegrodzie. Jeśli poprawnie odpowiesz na pytanie na kartce to przenoszona jest ona do
        następnej przegrody, jeśli nie trafia na koniec tej, w której się znalazła.
    </string>
    <string name="btn_flashcards_1">Przegródka 1</string>
    <string name="btn_flashcards_2">Przegródka 2</string>
    <string name="btn_flashcards_3">Przegródka 3</string>
    <string name="btn_flashcards_4">Przegródka 4</string>
    <string name="btn_flashcards_5">Przegródka 5</string>
    <string name="btn_next">Następny</string>
    <string name="btn_prev">Poprzedni</string>
    <string name="long_placeholder">placeholder very very very very very very very very very very very very very very very very long</string>
    <string name="placeholder">placeholder</string>
    <string name="repeating_method_name">Wielokrotne zderzenia</string>
    <string name="repeating_method_desc">
        Metoda wielokrotnych zderzeń to nic innego jak wykonywanie krótkich testów na podstawie
        jakiś zagadnień. Nie chodzi tylko o to, żeby sprawdzać wiedzę już zdobytą, ale żeby uczyć
        się na podstawie testów. Już za chwilę czeka Cię test składający się z 10 losowo wybranych
        pytań jednokrotnego wyboru. Poniżej możesz sterować trudnością testu, wybierając liczbę
        odpowiedzi.
    </string>
    <string name="number_of_answers">Ustaw liczbę odpowiedzi</string>
    <string name="start_test">Rozpocznij test</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="reset_partitions">Resetuj numery przegródek</string>
    <string name="mnemotechnics_desc">
        Mnemotechniki to zbiór metod, które ułatwiają zapamiętywanie oraz przypominanie sobie
        informacji. Najczęściej są to metody polegające na skojarzeniach, rytmice lub kategoryzacji.
        Poniżej znajdziesz opis kilku takich metod i przykłady jak je zastosować.
    </string>
    <string name="palace">Pałac pamięci</string>
    <string name="rhymes">Rymowanki</string>
    <string name="acronyms">Akronimy</string>
    <string name="chains">Łańcuchy skojarzeń</string>
</resources>